fix width jumping

--- a/playground/src/styles.css
+++ b/playground/src/styles.css
@@ -20,6 +20,7 @@
 
 .cm-scroller {
 	overflow: auto;
+	scrollbar-width: thin;
 }
 
 .cm-errorline {
